--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -368,7 +368,7 @@
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="emotion-loading"></span>
-                                        <span class="text-primary link emotion-filter"></span>
+                                        <span class="text-primary link emotion-filter font-weight-bold"></span>
                                         <span class="emotion-fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -574,7 +574,7 @@
             </div>
             <div class="modal-body">
                 <div class="text-muted filter-comment col-md-3">
-                    <span class="text-primary emotion-filter"></span>
+                    <span class="text-primary emotion-filter font-weight-bold"></span>
                     <span class="emotion-fixed-filter-text pl-2"></span>
                 </div>
                 <div id="container_sp500" style="width:100%; height:300px;"></div>
