--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -243,5 +243,11 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 
+.highcharts-tooltip table th {
+    padding-bottom: 0.2em;
+    border-bottom: 1px solid silver;
+}
+
+
 
 
