--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -564,7 +564,7 @@
 </div>
 
 <div class="modal emotion-modal" tabindex="-1" role="dialog" aria-hidden="true" >
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-bigger">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="emotionModalTitle">S&P with Market Emotion</h5>
