--- a/app/static/scrolling/css/styles.css
+++ b/app/static/scrolling/css/styles.css
@@ -652,7 +652,7 @@ progress {
 }
 @media (min-width: 992px) {
   .container-lg, .container-md, .container-sm, .container {
-    max-width: 960px;
+    max-width: 1100px !important;
   }
 }
 @media (min-width: 1200px) {
@@ -11291,10 +11291,10 @@ html {
 
 header {
   padding-top: 9.5rem;
-  padding-bottom: 29rem;
+  padding-bottom: 10rem;
 }
 
 section {
-  padding-top: 9rem;
-  padding-bottom: 9rem;
+  padding-top: 5rem;
+  padding-bottom: 8rem;
 }
